test/compile_errors/err_loop_mixed_plain_valued.w
//! expect-check-fail: break values of this loop do not unify

fn main:
    let flag = true
    let _ = loop:
        if flag:
            break 1
        break
